Refine login popover experience

--- a/login/index.html
+++ b/login/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Ingreso a portales DentPro</title>
+    <title>Acceso DentPro</title>
     <link rel="canonical" href="https://www.dentprocolombia.com/login" />
     <meta
       name="description"
-      content="Accede a los portales de pacientes, profesionales o administración de DentPro Colombia desde un único punto de entrada."
+      content="Inicia sesión desde cualquier página con la burbuja flotante de DentPro Colombia. Detectamos tu rol automáticamente para llevarte al tablero correcto."
     />
-    <meta property="og:title" content="Ingreso a portales DentPro" />
+    <meta property="og:title" content="Acceso DentPro" />
     <meta
       property="og:description"
-      content="Accede a los portales de pacientes, profesionales o administración de DentPro Colombia desde un único punto de entrada."
+      content="Inicia sesión desde cualquier página con la burbuja flotante de DentPro Colombia. Detectamos tu rol automáticamente para llevarte al tablero correcto."
     />
     <meta property="og:url" content="https://www.dentprocolombia.com/login" />
     <meta property="og:image" content="https://www.dentprocolombia.com/images/og-dentpro.jpg" />
     <meta property="og:locale" content="es_CO" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Ingreso a portales DentPro" />
+    <meta name="twitter:title" content="Acceso DentPro" />
     <meta
       name="twitter:description"
-      content="Accede a los portales de pacientes, profesionales o administración de DentPro Colombia desde un único punto de entrada."
+      content="Inicia sesión desde cualquier página con la burbuja flotante de DentPro Colombia. Detectamos tu rol automáticamente para llevarte al tablero correcto."
     />
     <meta name="twitter:url" content="https://www.dentprocolombia.com/login" />
     <meta name="twitter:image" content="https://www.dentprocolombia.com/images/og-dentpro.jpg" />
@@ -42,161 +42,85 @@
     <script type="module" src="../js/main.js"></script>
   </head>
   <body class="bg-gradient-to-b from-brand-light/40 via-white to-brand-light/30 font-sans text-slate-800 antialiased transition-colors duration-300 dark:from-surface-base dark:via-surface-base dark:to-surface-base dark:text-slate-100">
-    <div class="mx-auto w-full max-w-6xl px-6 py-10 md:py-16 lg:py-20">
+    <div class="mx-auto flex min-h-screen w-full max-w-4xl flex-col justify-center px-6 py-12 md:py-16 lg:py-20">
       <a
         href="/"
-        class="mb-8 inline-flex items-center gap-2 text-sm font-semibold text-brand-teal transition hover:text-brand-indigo dark:text-accent-cyan dark:hover:text-white"
+        class="mb-10 inline-flex items-center gap-2 text-sm font-semibold text-brand-teal transition hover:text-brand-indigo dark:text-accent-cyan dark:hover:text-white"
       >
         <span class="material-symbols-rounded text-base" aria-hidden="true">arrow_back</span>
         Volver a DentPro Colombia
       </a>
 
-      <div class="grid gap-12 lg:grid-cols-[1.05fr,0.95fr]">
-        <section class="card space-y-8 dark:bg-surface-elevated/80">
-          <header class="space-y-4">
-            <span class="badge">Portal unificado</span>
-            <h1 class="text-3xl font-semibold text-slate-900 dark:text-white md:text-4xl">
-              Inicia sesión y continúa tu experiencia con DentPro
-            </h1>
-            <p class="text-base text-slate-600 dark:text-slate-300">
-              Desde aquí centralizamos el acceso seguro a los portales exclusivos para pacientes, profesionales y administradores.
-              Escoge tu rol y utiliza tus credenciales para continuar. ¿Es tu primera vez? Nuestro equipo puede ayudarte a activar tu cuenta.
-            </p>
-          </header>
+      <section class="card space-y-8 dark:bg-surface-elevated/80">
+        <header class="space-y-4">
+          <span class="badge">Acceso actualizado</span>
+          <h1 class="text-3xl font-semibold text-slate-900 dark:text-white md:text-4xl">
+            Ahora ingresas desde la burbuja flotante
+          </h1>
+          <p class="text-base text-slate-600 dark:text-slate-300">
+            Centralizamos el inicio de sesión directamente en la cabecera del sitio. Haz clic en el ícono de usuario en cualquier página y aparecerá una burbuja para escribir tu correo y contraseña.
+          </p>
+        </header>
 
-          <div class="rounded-3xl border border-brand-light/70 bg-white/70 p-8 shadow-inner shadow-brand-teal/10 backdrop-blur dark:border-surface-muted/70 dark:bg-surface-base/80 dark:shadow-surface-dark">
-            <h2 class="text-xl font-semibold text-slate-900 dark:text-white">Accesos directos por rol</h2>
-            <p class="mt-2 text-sm text-slate-600 dark:text-slate-400">
-              Selecciona el portal que necesitas para ir directamente al entorno correspondiente.
-            </p>
-            <div class="mt-6 grid gap-4 md:grid-cols-3">
-              <a
-                href="/portal/pacientes"
-                class="group flex h-full flex-col justify-between rounded-2xl border border-brand-light/60 bg-white/80 p-5 transition hover:-translate-y-1 hover:border-brand-teal hover:shadow-xl hover:shadow-brand-teal/20 dark:border-surface-muted/70 dark:bg-surface-base/90 dark:hover:border-accent-cyan dark:hover:shadow-glow-dark"
-              >
-                <div class="space-y-3">
-                  <span class="material-symbols-rounded inline-flex h-11 w-11 items-center justify-center rounded-2xl bg-brand-light/80 text-brand-teal transition group-hover:bg-brand-teal group-hover:text-white dark:bg-accent-cyan/20 dark:text-accent-cyan dark:group-hover:bg-accent-cyan dark:group-hover:text-surface-base"
-                    >favorite</span
-                  >
-                  <div>
-                    <h3 class="text-base font-semibold text-slate-900 dark:text-white">Pacientes</h3>
-                    <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">
-                      Consulta tu historia clínica, gestiona citas y recibe recordatorios personalizados.
-                    </p>
-                  </div>
-                </div>
-                <span class="mt-6 inline-flex items-center gap-1 text-sm font-semibold text-brand-teal transition group-hover:gap-2 group-hover:text-brand-indigo dark:text-accent-cyan dark:group-hover:text-white"
-                  >Ir al portal<span class="material-symbols-rounded text-base" aria-hidden="true">arrow_outward</span></span
-                >
-              </a>
-              <a
-                href="/portal/profesionales"
-                class="group flex h-full flex-col justify-between rounded-2xl border border-brand-light/60 bg-white/80 p-5 transition hover:-translate-y-1 hover:border-brand-teal hover:shadow-xl hover:shadow-brand-teal/20 dark:border-surface-muted/70 dark:bg-surface-base/90 dark:hover:border-accent-cyan dark:hover:shadow-glow-dark"
-              >
-                <div class="space-y-3">
-                  <span class="material-symbols-rounded inline-flex h-11 w-11 items-center justify-center rounded-2xl bg-brand-light/80 text-brand-teal transition group-hover:bg-brand-teal group-hover:text-white dark:bg-accent-cyan/20 dark:text-accent-cyan dark:group-hover:bg-accent-cyan dark:group-hover:text-surface-base"
-                    >stethoscope</span
-                  >
-                  <div>
-                    <h3 class="text-base font-semibold text-slate-900 dark:text-white">Profesionales</h3>
-                    <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">
-                      Accede a tu agenda, firma evoluciones clínicas y colabora con el equipo interdisciplinario.
-                    </p>
-                  </div>
-                </div>
-                <span class="mt-6 inline-flex items-center gap-1 text-sm font-semibold text-brand-teal transition group-hover:gap-2 group-hover:text-brand-indigo dark:text-accent-cyan dark:group-hover:text-white"
-                  >Ir al portal<span class="material-symbols-rounded text-base" aria-hidden="true">arrow_outward</span></span
-                >
-              </a>
-              <a
-                href="/portal/administracion"
-                class="group flex h-full flex-col justify-between rounded-2xl border border-brand-light/60 bg-white/80 p-5 transition hover:-translate-y-1 hover:border-brand-teal hover:shadow-xl hover:shadow-brand-teal/20 dark:border-surface-muted/70 dark:bg-surface-base/90 dark:hover:border-accent-cyan dark:hover:shadow-glow-dark"
-              >
-                <div class="space-y-3">
-                  <span class="material-symbols-rounded inline-flex h-11 w-11 items-center justify-center rounded-2xl bg-brand-light/80 text-brand-teal transition group-hover:bg-brand-teal group-hover:text-white dark:bg-accent-cyan/20 dark:text-accent-cyan dark:group-hover:bg-accent-cyan dark:group-hover:text-surface-base"
-                    >monitoring</span
-                  >
-                  <div>
-                    <h3 class="text-base font-semibold text-slate-900 dark:text-white">Administración</h3>
-                    <p class="mt-1 text-sm text-slate-600 dark:text-slate-400">
-                      Gestiona sedes, indicadores, facturación y la experiencia integral de los pacientes.
-                    </p>
-                  </div>
-                </div>
-                <span class="mt-6 inline-flex items-center gap-1 text-sm font-semibold text-brand-teal transition group-hover:gap-2 group-hover:text-brand-indigo dark:text-accent-cyan dark:group-hover:text-white"
-                  >Ir al portal<span class="material-symbols-rounded text-base" aria-hidden="true">arrow_outward</span></span
-                >
-              </a>
+        <div class="space-y-6 rounded-3xl border border-brand-light/70 bg-white/80 p-8 shadow-inner shadow-brand-teal/10 backdrop-blur dark:border-surface-muted/70 dark:bg-surface-base/80 dark:shadow-surface-dark">
+          <div class="flex items-start gap-3">
+            <span class="material-symbols-rounded text-2xl text-brand-teal dark:text-accent-cyan" aria-hidden="true">info</span>
+            <div class="space-y-2 text-sm text-slate-600 dark:text-slate-300">
+              <p>Detectamos tu rol automáticamente según tu cuenta. No necesitas elegir entre paciente, profesional o administración.</p>
+              <p>Si llegaste aquí directamente, te llevaremos al nuevo acceso en unos segundos.</p>
             </div>
           </div>
-        </section>
+          <a
+            id="manualLoginLink"
+            href="/?auth=1"
+            class="btn-primary inline-flex w-full items-center justify-center gap-2 text-sm font-semibold"
+          >
+            Abrir burbuja de inicio de sesión
+            <span class="material-symbols-rounded text-base" aria-hidden="true">open_in_new</span>
+          </a>
+        </div>
 
-        <section class="card space-y-8 dark:bg-surface-elevated/80">
-          <header class="space-y-2">
-            <h2 class="text-2xl font-semibold text-slate-900 dark:text-white">Ingresa con tus credenciales</h2>
-            <p class="text-sm text-slate-600 dark:text-slate-400">
-              Para proteger tu información utilizamos autenticación multifactor. Después de ingresar tus datos te enviaremos un código de verificación.
-            </p>
-          </header>
-          <form class="space-y-6" action="https://dentprocolombia.com/api/login" method="post">
-            <div class="space-y-2">
-              <label for="email" class="text-sm font-semibold text-slate-700 dark:text-slate-200">Correo electrónico</label>
-              <input
-                id="email"
-                name="email"
-                type="email"
-                required
-                placeholder="tucorreo@dentpro.co"
-                class="input"
-                autocomplete="email"
-              />
-            </div>
-            <div class="space-y-2">
-              <label for="password" class="text-sm font-semibold text-slate-700 dark:text-slate-200">Contraseña</label>
-              <input
-                id="password"
-                name="password"
-                type="password"
-                required
-                placeholder="Ingresa tu contraseña"
-                class="input"
-                autocomplete="current-password"
-              />
-              <div class="flex justify-end">
-                <a
-                  href="/recuperar"
-                  class="text-sm font-semibold text-brand-teal transition hover:text-brand-indigo dark:text-accent-cyan dark:hover:text-white"
-                  >¿Olvidaste tu contraseña?</a
-                >
-              </div>
-            </div>
-            <div class="space-y-2">
-              <label for="role" class="text-sm font-semibold text-slate-700 dark:text-slate-200">Ingresa como</label>
-              <select id="role" name="role" class="input">
-                <option value="paciente">Paciente</option>
-                <option value="profesional">Profesional</option>
-                <option value="administracion">Administración</option>
-              </select>
-            </div>
-            <button type="submit" class="btn-primary w-full justify-center">Iniciar sesión</button>
-          </form>
-          <footer class="space-y-2 text-sm text-slate-500 dark:text-slate-400">
-            <p>
-              ¿No tienes usuario aún? Escríbenos a
-              <a
-                href="mailto:soporte@dentprocol.com"
-                class="font-semibold text-brand-teal transition hover:text-brand-indigo dark:text-accent-cyan dark:hover:text-white"
-                >soporte@dentprocol.com</a
-              >
-              y te ayudaremos a crearlo.
-            </p>
-            <p class="flex items-start gap-2 text-xs text-slate-500 dark:text-slate-500">
-              <span class="material-symbols-rounded text-base" aria-hidden="true">shield_lock</span>
-              Protegemos tus datos siguiendo normas de bioseguridad digital y cifrado de extremo a extremo.
-            </p>
-          </footer>
-        </section>
-      </div>
+        <footer class="space-y-3 text-sm text-slate-500 dark:text-slate-400">
+          <p>
+            ¿Necesitas ayuda con tu cuenta? Escríbenos a
+            <a
+              href="mailto:soporte@dentprocol.com"
+              class="font-semibold text-brand-teal transition hover:text-brand-indigo dark:text-accent-cyan dark:hover:text-white"
+              >soporte@dentprocol.com</a
+            >
+            y te acompañamos en el proceso.
+          </p>
+          <p class="flex items-start gap-2 text-xs text-slate-500 dark:text-slate-500">
+            <span class="material-symbols-rounded text-base" aria-hidden="true">shield_lock</span>
+            Protegemos tus datos siguiendo normas de bioseguridad digital y cifrado de extremo a extremo.
+          </p>
+        </footer>
+      </section>
     </div>
+
+    <script>
+      window.addEventListener('DOMContentLoaded', () => {
+        const target = new URL(window.location.origin);
+        target.pathname = '/';
+        const params = new URLSearchParams(window.location.search);
+        params.set('auth', '1');
+        target.search = params.toString();
+
+        const redirectUrl = target.toString();
+        const manualLink = document.getElementById('manualLoginLink');
+        if (manualLink) {
+          manualLink.setAttribute('href', redirectUrl);
+        }
+
+        window.setTimeout(() => {
+          window.location.replace(redirectUrl);
+        }, 600);
+      });
+    </script>
+    <noscript>
+      <div class="mx-auto mt-4 max-w-4xl rounded-2xl border border-amber-200 bg-amber-50 p-4 text-sm font-semibold text-amber-900 dark:border-amber-500/60 dark:bg-amber-500/10 dark:text-amber-200">
+        Activa JavaScript para abrir automáticamente el nuevo panel de acceso o utiliza el botón "Abrir burbuja de inicio de sesión".
+      </div>
+    </noscript>
   </body>
 </html>
